add_library(
    bestiary
    BaseVisitor.cpp
    BaseVisitor.hpp
    BestiaryFactory.cpp
    BestiaryFactory.hpp
    Bestiary.cpp
    Bestiary.hpp
    DescriptionOutput.cpp
    DescriptionOutput.hpp
    DeathVisitor.cpp
    DeathVisitor.hpp
    EventDispatcher.cpp
    EventDispatcher.hpp
    FreeOutput.cpp
    FreeOutput.hpp
    IBestiary.hpp
    IEventDispatcher.hpp
    Scene.cpp
)
add_executable(
    battle
    main.cpp
)

target_link_libraries(
    battle
    PRIVATE
        bestiary
)

add_subdirectory(tests)
